# FastAPI_SQLAlcemy2.0

./: crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/versions/: 2024_01_26_0955-886cf4c8eb40_create_products_table.py  2024_01_26_1012-b0358712fb5b_create_users_table.py  2024_01_26_1022-7f39ede32dac_create_posts_table.py  2024_02_03_1109-846d75666cb9_create_profile_table.py  2024_02_03_1432-e00467c23561_create_order_product_association_table.py  2024_02_06_0957-9c7f8339e380_add_count_column.py  2024_02_06_1111-3c2f8305caa6_add_price_column.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
